--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node":"4.2.3",
+    "npm": "2.14.7"
+    },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
+    "mongoose": "^4.4.4",
     "morgan": "^1.6.1",
     "stylus": "^0.53.0"
   }
