--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node":"4.2.3",
+    "node": "4.2.3",
     "npm": "2.14.7"
-    },
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "jade": "^1.11.0",
     "mongoose": "^4.4.4",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "stylus": "^0.53.0"
   }
 }
